# fastapi_willy

./: .gitignore  README.md  alembic.ini  load_db.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 9341c8bc3a01_agregar_campo_name_a_tabla_user.py
config/: db.py  load_env.py
model/: db_model.py
